FlowChat 2.0.0 — port to MC 1.21.4
Major rewrite from 1.16.4 to 1.21.4:
- Updated Fabric Loom 0.5 → 1.9, Java 8 → 21
- Fixed mixin targets: addMessage now uses 3-arg variant (Text, MessageSignatureData, MessageIndicator)
- Outgoing chat mixin targets ClientPlayNetworkHandler (sendChatMessage/sendCommand split since 1.19.1)
- Replaced System.out.println with SLF4J Logger
- Replaced deprecated JsonParser().parse() with JsonParser.parseReader()
- Replaced 'pleasecancelthismessage' hack with proper @Inject cancellation + recursion guard
- New ChatHelper class abstracts version-specific chat/command sending
- Config now uses FabricLoader.getConfigDir() instead of hardcoded path
- Added sound notification support (playSound/soundName in rules) — Issue #2
- Added tag variable replacement ({username}, {serverip}, {servername}, {time}) — Issue #2
- Tested: regex replacement, toast notifications, auto-responses all working in-game